[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market_data"
version = "0.1.0"
description = "Daily OHLCV data collector for the paper_trading backtest engine."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "yfinance>=0.2",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "requests>=2.31",
]

[project.scripts]
market-data-fetch-tickers = "market_data.fetch_tickers:main"
market-data-run           = "market_data.orchestrator:main"
market-data-merge         = "market_data.merge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
