[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market_data"
version = "0.2.4"
description = "Market data collector for the paper_trading backtest engine."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "yfinance>=0.2",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "requests>=2.31",
  "fredapi>=0.5",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "tenacity>=8.2",
]

[project.scripts]
market-data-fetch-tickers  = "market_data.fetch_tickers:main"
market-data-run            = "market_data.orchestrator:main"
market-data-merge          = "market_data.merge:main"
market-data-fetch-indices       = "market_data.fetch_indices:main"
market-data-fetch-macro         = "market_data.fetch_macro:main"
market-data-fetch-fundamentals  = "market_data.fetch_fundamentals:main"
market-data-fetch-analyst-estimates = "market_data.fetch_analyst_estimates:main"
market-data-migrate-fundamentals = "market_data.migrate_fundamentals:main"
market-data-migrate-macro        = "market_data.migrate_macro:main"
market-data-fetch-options       = "market_data.fetch_options:main"
market-data-fetch-constituent-history = "market_data.fetch_constituent_history:main"
market-data-backfill-constituents     = "market_data.fetch_backfill:main"
market-data-extend-history            = "market_data.fetch_extend_history:main"
market-data-health              = "market_data.health:main"
market-data-smoke-test          = "market_data.smoke_test:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "pytest-cov>=5.0",
  "responses>=0.25",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src/market_data --cov-report=term-missing"
